...

protocol GenreChipsViewDelegate: AnyObject {
    func didSelectAddGenre(genreChipsView: GenreChipsView)
}

class GenreChipsView: UIView {
    var genreChipsCollectionView: UICollectionView = {
        let chipsGenreCollectionViewLayout = UICollectionViewFlowLayout()
        chipsGenreCollectionViewLayout.scrollDirection = .horizontal
        
        return UICollectionView(frame: .zero, collectionViewLayout: chipsGenreCollectionViewLayout)
    }()
    weak var delegate: GenreChipsViewDelegate?
...
        self.addButton.addTarget(self, action: #selector(addGenre), for: .touchUpInside)
        self.addButton.isHidden = true
    }
    
    func setAddFilterButton() {
        self.addFilterButton = UIButton(type: .custom)
        self.addFilterButton.setTitle("Add filter", for: .normal)
        self.addFilterButton.setTitleColor(.systemBlue, for: .normal)
        self.addFilterButton.contentHorizontalAlignment = .fill
        self.addFilterButton.contentVerticalAlignment = .fill
        self.addFilterButton.tintColor = .systemBlue
        self.addFilterButton.addTarget(self, action: #selector(addGenre), for: .touchUpInside)
        self.addFilterButton.translatesAutoresizingMaskIntoConstraints = false
...
