...
        let genrePickerView = UIPickerView()
        return genrePickerView
    }()
    
    lazy var doneButton: UIButton = {
        let doneButton = UIButton()
        doneButton.setTitle("Done", for: .normal)
        doneButton.setTitleColor(.systemBlue, for: .normal)
        doneButton.translatesAutoresizingMaskIntoConstraints = false
        return doneButton
    }()
    
    lazy var closeButton: UIButton = {
...
